...
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionDetailBody"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/questionDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
