...

    <ProgressBar
        android:id="@+id/booksProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_create_listing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recycle_books" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_books"
...
