...
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/bookDescription"
        app:layout_constraintStart_toStartOf="@+id/bookDescription"
        app:layout_constraintTop_toBottomOf="@+id/bookDescription" />

    <Button
        android:id="@+id/registerBook"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:text="Register Book"
        app:layout_constraintEnd_toEndOf="@+id/bookPrice"
        app:layout_constraintHorizontal_bias="0.5"
...
